; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_cmdq.c_hinic_free_cmdq_buf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_cmdq.c_hinic_free_cmdq_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hinic_cmdqs = type { i32 }
%struct.hinic_cmdq_buf = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hinic_free_cmdq_buf(%struct.hinic_cmdqs* %0, %struct.hinic_cmdq_buf* %1) #0 {
  %3 = alloca %struct.hinic_cmdqs*, align 8
  %4 = alloca %struct.hinic_cmdq_buf*, align 8
  store %struct.hinic_cmdqs* %0, %struct.hinic_cmdqs** %3, align 8
  store %struct.hinic_cmdq_buf* %1, %struct.hinic_cmdq_buf** %4, align 8
  %5 = load %struct.hinic_cmdqs*, %struct.hinic_cmdqs** %3, align 8
  %6 = getelementptr inbounds %struct.hinic_cmdqs, %struct.hinic_cmdqs* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.hinic_cmdq_buf*, %struct.hinic_cmdq_buf** %4, align 8
  %9 = getelementptr inbounds %struct.hinic_cmdq_buf, %struct.hinic_cmdq_buf* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.hinic_cmdq_buf*, %struct.hinic_cmdq_buf** %4, align 8
  %12 = getelementptr inbounds %struct.hinic_cmdq_buf, %struct.hinic_cmdq_buf* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @dma_pool_free(i32 %7, i32 %10, i32 %13)
  ret void
}

declare dso_local i32 @dma_pool_free(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
